Bug 136212 - Writer Navigator blinking/jumping when table, frame, image, OLE and draw objects are not visible
Summary: Writer Navigator blinking/jumping when table, frame, image, OLE and draw obje...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-28 03:07 UTC by Jim Raykowski
Modified: 2020-09-03 19:49 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Navigator blinking/jumping drawing objects test file (24.91 KB, application/vnd.oasis.opendocument.text)
2020-08-28 03:07 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2020-08-28 03:07:27 UTC
Created attachment 164781 [details]
Navigator blinking/jumping drawing objects test file

Similar to invisible sections causing blinking described in bug 118322, drawing objects hidden by outline content folding cause blinking and jumping in the Navigator.

Steps to repro in version 7.1 and above:

1) Enable experimental features Menu > Tools > Options or Alt + F12
Options dialog appears
2) In LibreOffice > Advanced tab Optional Features check 'Enable experimental features (may be unstable)
3) In LibreOffice Writer > View tab check 'Show outline content visibility button'
4) Open sidebar Navigator Menu > View > Sidebar and then select the Navigator tab or F5 floating Navigator
5) Open attached example file 'DrawingObjectsTest.odt'

Results:
x11 vcl backend, Navigator content view blinks
gtk3 vcl backend, scrolled Navigator content view jumps back to selected entry

Expected results:
No blink and no jumping
Comment 1 Jim Raykowski 2020-08-28 04:11:45 UTC
I've gotten a head of merged patches. This only happens when the proposed patch for Bug 95378 is applied.
Comment 2 Jim Raykowski 2020-08-28 04:23:39 UTC
Hmmm, the reason why I couldn't repro was that I had the patch to fix this applied and not because of my previous comment.
Comment 3 Jim Raykowski 2020-08-30 06:11:09 UTC
This also occurs when table, frame, image, and OLE objects are hidden.
Comment 4 Commit Notification 2020-09-03 07:14:27 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/09e35aafccf2792c7a25e4d8a896b69f0ab47e04

tdf#136212 Fix Writer Navigator blink jump

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.