tdf#136212 Fix Writer Navigator blink jump

when table, frame, image, OLE and draw objects are hidden

This patch fixes Writer Navigator blinking and scrolling back to
highlighted entry when table, frame, image, OLE and draw objects are
hidden by using checkVisiblityChanged function approach used by
SwContentType::FillMemberList ContentTypeId::REGION case.

For detailed explanation see commit
f5f6781acb292783033caea0147ff98490c78d89 and tdf#118322 Avoid blinking in
Explorer for 'Section' part

Change-Id: Ia119b7153394e09d8ae226a5a0c2f4d6d1d2838a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/101515
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>